--- a/customer.html
+++ b/customer.html
@@ -27,7 +27,7 @@
           <div class="col-md-10 navright">
             <ul>  
              <li><a href="dashboard.html">Dashboard</a></li>
-             <li><a href="product.html">Customer Management</a></li>
+             <li><a href="customer.html">Customer Management</a></li>
               <li><a href="profile.html">My Profile</a></li>
               <li><a href="index.html">Logout</a></li>
             </ul>
@@ -75,27 +75,27 @@
                                 </tr>
                                 <tr ng-repeat="data in namesData" ng-include="getTemplate(data)">
                                 </tr>
-                                <td>234234}</td>
-                                <td>234234234</td>
-                                <td>234324</td>
                                 <td>234234</td>
-                                <td>234234</td>
-                                <td>234234</td>
-                                <td>234234234</td>
-                                <td>23423423</td>
+                                <td>Pedro</td>
+                                <td>Dela Cruz</td>
+                                <td>0967234234</td>
+                                <td>pedro@usep.edu.ph</td>
+                                <td>Macopa</td>
+                                <td>Davao</td>
+                                <td>8000</td>
                                 <td>
                                     <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                                     <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
                                 </td>
                                 <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
                                     <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
+                                    <td>Masay</td>
+                                    <td>Dela Cerna</td>
+                                    <td>043567234234</td>
+                                    <td>masay@usep.edu.ph</td>
+                                    <td>Santol</td>
+                                    <td>Davao</td>
+                                    <td>8000</td>
                                     <td>
                                         <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                                         <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
@@ -103,119 +103,21 @@
                                 </tr>
 
                                 <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
+                                    <td>2342341</td>
+                                    <td>Lamboda</td>
+                                    <td>Dela Torre</td>
+                                    <td>0967345345</td>
+                                    <td>lamboda@usep.edu.ph</td>
+                                    <td>Mangga</td>
+                                    <td>Davao</td>
+                                    <td>8000</td>
                                     <td>
                                         <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                                         <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
                                     </td>
                                 </tr>
 
-                                <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
-                                    <td>
-                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
-                                    <td>
-                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
-                                    <td>
-                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
-                                    <td>
-                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
-                                    <td>
-                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
-                                    <td>
-                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>234234}</td>
-                                    <td>234234234</td>
-                                    <td>234324</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234</td>
-                                    <td>234234234</td>
-                                    <td>23423423</td>
-                                    <td>
-                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
-                                    </td>
-                                </tr>
-
+                               
 
 
                             </tbody>
