--- a/profile.html
+++ b/profile.html
@@ -44,11 +44,7 @@ use Illuminate\Support\Facades\DB;
                     <h5>Full Name</h5>
                   </div>
                   <div class="col-md-10 text-secondary">
-                    <?php
-                    $user = DB::table('staffs')->where('staff_id', session('staff_id'))->first();
-
-                  echo $user->first_name." ".$user->last_name;
-                    ?>
+                    Juan Dela Cruz
                   </div>
                 </div>
                 <div class="row">
@@ -56,11 +52,7 @@ use Illuminate\Support\Facades\DB;
                     <h5>Staff ID</h5>
                   </div>
                   <div class="col-md-10 text-secondary">
-                  <?php
-                    $user = DB::table('staffs')->where('staff_id', session('staff_id'))->first();
-
-                  echo $user->staff_id;
-                    ?>
+                  1
                   </div>
                 </div>
                 <div class="row">
@@ -68,11 +60,7 @@ use Illuminate\Support\Facades\DB;
                     <h5>Contact No.</h5>
                   </div>
                   <div class="col-md-10 text-secondary">
-                  <?php
-                    $user = DB::table('staffs')->where('staff_id', session('staff_id'));
-
-                  echo $user->phone;
-                    ?>
+             09650859745
                   </div>
                 </div>
                 <div class="row">
@@ -80,11 +68,7 @@ use Illuminate\Support\Facades\DB;
                     <h5>Phone</h5>
                   </div>
                   <div class="col-md-10 text-secondary">
-                  <?php
-                    $user = DB::table('staffs')->where('staff_id', session('staff_id'))->first();
-
-                  echo $user->phone;
-                    ?>
+                    0843535234
                   </div>
                 </div>
                 <div class="row">
@@ -92,11 +76,7 @@ use Illuminate\Support\Facades\DB;
                     <h5>Email</h5>
                   </div>
                   <div class="col-md-10 text-secondary">
-                  <?php
-                    $user = DB::table('staffs')->where('staff_id', session('staff_id'))->first();
-
-                  echo $user->email;
-                    ?>
+            juan@usep.edu.ph
                   </div>
                 </div>
                 <div class="row">
@@ -104,11 +84,7 @@ use Illuminate\Support\Facades\DB;
                     <h5>Branch_ID</h5>
                   </div>
                   <div class="col-md-10 text-secondary">
-                  <?php
-                    $user = DB::table('staffs')->where('staff_id', session('staff_id'))->first();
-
-                  echo $user->branch_id;
-                    ?>
+          1
                   </div>
                 </div>
                 
