--- a/staffmanagement.html
+++ b/staffmanagement.html
@@ -99,13 +99,13 @@
                 <tr ng-repeat="data in namesData" ng-include="getTemplate(data)">
                 </tr>
                 <tr>
-                  <td>sdfsdfsdfsdfsd</td>
-                  <td>sdfdsfsdfsdf</td>
-                  <td>sdfdsfsdfsdf</td>
-                  <td>sdfsdfsdfsdf</td>
-                  <td>sdfdsfsdfsdf</td>
-                  <td>sdfsdfsdfsdfsdf</td>
-                  <td>ssfgsfsdfdsf</td>
+                  <td>1</td>
+                  <td>Juan Dela</td>
+                  <td>Cruz</td>
+                  <td>juan@usep.edu.ph</td>
+                  <td>0923424433</td>
+                  <td>Davao</td>
+                  <td>Staff</td>
 
                   <td>
                       <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
@@ -113,13 +113,13 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>@234234</td>
-                  <td>234234234</td>
-                  <td>sdfsdfsdf</td>
-                  <td>xcvbcvbcvb</td>
-                  <td>sdfsdfsdf</td>
-                  <td>sdfsdfsdfsdfsdfsd</td>
-                  <td>@sfdsfsdfdsf</td>
+                  <td>2</td>
+                  <td>Connor</td>
+                  <td>Mhang</td>
+                  <td>MhangConnor@usep.edu.ph</td>
+                  <td>09234234332</td>
+                  <td>Davao</td>
+                  <td>Admin</td>
 
                   <td>
                       <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
@@ -127,61 +127,20 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>@234234</td>
-                  <td>234234234</td>
-                  <td>sdfsdfsdf</td>
-                  <td>xcvbcvbcvb</td>
-                  <td>sdfsdfsdf</td>
-                  <td>sdfsdfsdfsdfsdfsd</td>
-                  <td>@sfdsfsdfdsf</td>
+                  <td>3</td>
+                  <td>Connoradal</td>
+                  <td>Mhangos</td>
+                  <td>MhangConnoronadal@usep.edu.ph</td>
+                  <td>09234233434</td>
+                  <td>Davao</td>
+                  <td>Admin</td>
 
                   <td>
                       <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                       <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
                   </td>
                 </tr>
-                <tr>
-                  <td>@234234</td>
-                  <td>234234234</td>
-                  <td>sdfsdfsdf</td>
-                  <td>xcvbcvbcvb</td>
-                  <td>sdfsdfsdf</td>
-                  <td>sdfsdfsdfsdfsdfsd</td>
-                  <td>@sfdsfsdfdsf</td>
-
-                  <td>
-                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>@234234</td>
-                  <td>234234234</td>
-                  <td>sdfsdfsdf</td>
-                  <td>xcvbcvbcvb</td>
-                  <td>sdfsdfsdf</td>
-                  <td>sdfsdfsdfsdfsdfsd</td>
-                  <td>@sfdsfsdfdsf</td>
-
-                  <td>
-                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>@234234</td>
-                  <td>234234234</td>
-                  <td>sdfsdfsdf</td>
-                  <td>xcvbcvbcvb</td>
-                  <td>sdfsdfsdf</td>
-                  <td>sdfsdfsdfsdfsdfsd</td>
-                  <td>@sfdsfsdfdsf</td>
-
-                  <td>
-                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
-                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
-                  </td>
-                </tr>
+     
 
               </tbody>
             </table>
