--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <br>	
 			<a href="dashboard.html"><button type="button" class="btn btn-primary col-12" style="margin-bottom:5px">LOGIN AS STAFF</button></a><br>
 			<a href="staffmanagement.html"><button type="button" class="btn btn-primary col-12" style="margin-bottom:5px">LOGIN AS ADMIN</button></a><br>
-			<a href="/newemp" style="text-decoration:none;">New Employee</a>
+			<a href="register.html" style="text-decoration:none;">New Employee</a>
 		</form>
 	</div>
 </body>
